--- a/frontend/src/Components/Customer/AboutUs.css
+++ b/frontend/src/Components/Customer/AboutUs.css
@@ -1,18 +1,15 @@
-/*---------About us-------*/
-.about--us {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
+
+
 
 .aboutus--section {
+ 
   width: 100%;
   min-height: 100vh;
-  background-color: #ddd;
+  background-color: #e98074;
 }
 
 .aboutus--container {
+  margin-top: 20px;
   width: 80%;
   display: block;
   margin: auto;
@@ -21,7 +18,9 @@
 
 .aboutus--content-section {
   float: left;
+  margin-top: 40px;
   width: 55%;
+  font-family:  'Nunito,sans-serif'
 }
 
 .aboutus--image-section {
@@ -35,15 +34,11 @@
   margin-top: 70px;
 }
 
-.aboutus--title {
-  text-transform: uppercase;
-  font-size: 28px;
-  color: white;
-}
+
 
 .aboutus--content h3 {
   margin-top: 20px;
-  color: #222121;
+  color: #ffffff;
   font-size: 20px;
   font-weight: 400;
 }
@@ -56,11 +51,11 @@
 }
 
 .aboutus--content p {
-  margin-top: 10px;
-  font-family: sans-serif;
+  margin-top: 30px;
+
   font-size: 18px;
   line-height: 1.5;
-  color: #000000;
+  color: #fff;
 }
 
 .aboutus--button {
@@ -76,20 +71,19 @@
   letter-spacing: 1.5px;
 }
 
-.aboutus--button a:hover {
-  background-color: #ff5065;
-  color: #fff;
-}
+
 .aboutus--social {
   margin: 40px 40px;
+  margin-left: 20%;
 }
 .aboutus--social a {
-  color: #ff5065;
-  font-size: 30px;
+  color: #eae7dc;
+  font-size: 25px;
   padding: 0px 10px;
+  margin-left: 45px;
 }
 .aboutus--social i:hover {
-  color: #ffffff;
+  color: #8e8d8a;
 }
 
 @media screen and (max-width: 768px) {
@@ -109,6 +103,7 @@
   .aboutus--title {
     text-align: center;
     font-size: 19px;
+    margin-bottom: 40px;
   }
   .aboutus--button {
     text-align: center;
